--- a/app/src/main/res/layout/activity_book_content.xml
+++ b/app/src/main/res/layout/activity_book_content.xml
@@ -37,7 +37,7 @@
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:textColor="#c0b9b9" />
-        <com.draw.aidansliney.draw3.ExpandableGridView
+        <com.learn.howtodraw.draw.ExpandableGridView
             android:numColumns="auto_fit"
             android:gravity="center"
             android:columnWidth="150dp"
