--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -334,63 +334,69 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp">
 
-                <TextView
+<!--                <TextView
                     android:onClick="onBuyGasButtonClicked"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Buy and Use"
-                    android:layout_marginBottom="30dp" />
+                    android:layout_marginBottom="30dp" />-->
 
-                <TextView
+<!--                <TextView
                     android:id="@+id/upgrade_button"
                     android:onClick="onUpgradeAppButtonClicked"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Buy and Keep"
-                    android:layout_marginBottom="30dp" />
+                    android:layout_marginBottom="30dp" />-->
 
-                <TextView
-                    android:id="@+id/infinite_gas_button"
+               <!-- <TextView
+                    android:id="@+id/infinite_gas_button2"
                     android:onClick="onSubscribedButtonClicked"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Subscribe"
-                    android:layout_marginBottom="90dp"/>
+                    android:layout_marginBottom="90dp"/>-->
 
-                <TextView
-                    android:id="@+id/TV1"
-                    android:layout_width="match_parent"
+                <com.learn.howtodraw.draw.FontA.TextAwesome
+                    android:id="@+id/tvThumb"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:textSize="45sp"
-                    android:text="@string/fa_icon_areachart" />
+                    android:text="@string/fa_thumbs_up"
+                    android:textSize="30sp" />
 
-                <TextView
 
-                    android:id="@+id/TV2"
-                    android:layout_width="match_parent"
+                <com.learn.howtodraw.draw.FontA.ButtonAwesome
+                    android:id="@+id/infinite_gas_button"
+                    android:onClick="onSubscribedButtonClicked"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:textSize="45sp"
-                    android:text="@string/fa_icon_piechart" />
+                    android:text="@string/fa_money"
+                    android:textSize="20dp"
+                    android:textColor="#84c380"
+                    android:background="#e1ecf4"
+                    android:layout_marginBottom="10dp"/>
 
-                <TextView
-
-                    android:layout_width="match_parent"
+                <com.learn.howtodraw.draw.FontA.ButtonAwesome
+                    android:onClick="onBuyGasButtonClicked"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:textSize="45sp"
-                    android:text="@string/fa_icon_linechart" />
+                    android:text="@string/fa_money2"
+                    android:textSize="20dp"
+                    android:textColor="#84c380"
+                    android:background="#e1ecf4"
+                    android:layout_marginBottom="10dp"/>
 
-                <Button
-                    android:id="@+id/TV3"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:text="@string/fa_icon_linechart" />
 
+                <com.learn.howtodraw.draw.FontA.ButtonAwesome
+                    android:id="@+id/upgrade_button"
+                    android:onClick="onUpgradeAppButtonClicked"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/fa_money3"
+                    android:textSize="20dp"
+                    android:textColor="#84c380"
+                    android:background="#e1ecf4"
+                    android:layout_marginBottom="100dp"/>
 
             </LinearLayout>
 
