--- a/app/src/main/res/layout/grid_single.xml
+++ b/app/src/main/res/layout/grid_single.xml
@@ -12,7 +12,6 @@
         android:layout_margin="10dp">
 
         <LinearLayout
-
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -21,7 +20,7 @@
             <ImageView
                 android:id="@+id/grid_image"
                 android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:src="@drawable/head1_thumb" />
 
             <View
